# VaultGuard

./: .gitignore  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  crypto.rs  error.rs  lib.rs  main.rs  models.rs  security.rs  vault.rs
src/locales/: de.json  en.json
src/scripts/: app.js  generator.js  i18n.js  search.js  tauri-dialog.js  ui.js  vault.js
src/styles/: animations.css  components.css  main.css  screens.css
