[package]
name = "vaultguard"
version = "0.1.0"
description = "A secure, zero-knowledge local password manager"
authors = ["VaultGuard"]
edition = "2021"

[lib]
name = "vaultguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
subtle = "2.6"

# Security
zeroize = { version = "1.8", features = ["derive"] }
libc = "0.2"

# Utility
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
csv = "1.3"
log = "0.4"
env_logger = "0.11"
quick-xml = "0.39"
url = "2.5"
winapi = { version = "0.3", features = ["processthreadsapi", "winnt"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
